--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -8,27 +8,74 @@
     tools:context=".DetailMovie">
 
     <ImageView
-        android:id="@+id/image_view_detail"
+        android:id="@+id/image_backdrop_detail"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:src="@mipmap/ic_launcher"/>
-    <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/launcher"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/image_view_detail"
+            android:layout_width="90dp"
+            android:layout_height="130dp"/>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/movie_detail_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Movie Name"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="30px"
+                android:textColor="@color/black"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"/>
 
-    <TextView
-        android:id="@+id/movie_detail_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Movie Name"
-        android:textSize="25sp"
-        android:layout_marginTop="30px"
-        android:textColor="@color/black"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RatingBar
+                    android:id="@+id/ratingbar_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_marginTop="20px"
+                    android:layout_marginStart="16dp"/>
+
+                <TextView
+                    android:id="@+id/rating_detail_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0.0"
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="20px"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/release_detail_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="release date"
+                android:layout_marginTop="20px"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -36,49 +83,14 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/release_detail_txt"
+            android:id="@+id/description_detail_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="release date"
+            android:text="Movie Description"
             android:layout_marginTop="20px"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"/>
-
-        <TextView
-            android:id="@+id/rating_detail_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0.0"
-            android:textStyle="bold"
-            android:layout_marginTop="20px"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:drawableLeft="@drawable/ic_baseline_star_24"/>
-
-        <RatingBar
-            android:id="@+id/ratingbar_detail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.RatingBar.Small"
-            android:layout_marginTop="20px"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
-
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/description_detail_txt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Movie Description"
-        android:layout_marginTop="20px"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
-
-    <ImageView
-        android:id="@+id/image_backdrop_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 </LinearLayout>
