--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -2,25 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginLeft="20px">
 
     <ImageView
         android:id="@+id/image_view_main"
-        android:layout_width="100dp"
+        android:layout_width="140dp"
         android:layout_height="180dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_marginTop="10px"
+        app:srcCompat="@mipmap/launcher" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:layout_marginLeft="10px"
         android:paddingTop="20px">
 
         <ImageView
             android:id="@+id/image_backdrop_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50px"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,7 +80,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Release : "
+                    android:text="@string/rilis"
                     android:textStyle="bold"
                     android:textColor="#39A388"
                     android:layout_marginTop="20px" />
