--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -4,14 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginLeft="20px">
+    android:background="@color/vintage4"
+    android:layout_marginBottom="10px"
+    android:padding="10px">
 
     <ImageView
         android:id="@+id/image_view_main"
         android:layout_width="140dp"
         android:layout_height="180dp"
-        android:layout_marginTop="10px"
-        app:srcCompat="@mipmap/launcher" />
+        app:srcCompat="@mipmap/launcher"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="180dp"
@@ -53,11 +55,12 @@
 
                 <RatingBar
                     android:id="@+id/ratingbar_main"
+                    style="@android:style/Widget.Material.Light.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:layout_marginTop="20px"
-                    style="@android:style/Widget.Material.Light.RatingBar.Small"/>
+                    android:theme="@style/RatingBar"
+                    android:layout_marginTop="22px"
+                    android:numStars="5" />
 
                 <TextView
                     android:id="@+id/rating_main_txt"
@@ -65,7 +68,6 @@
                     android:layout_height="wrap_content"
                     android:text="0.0"
                     android:textSize="13sp"
-                    android:background="@drawable/rating_backgroud"
                     android:layout_marginTop="20px"
                     android:layout_marginLeft="20px"
                     android:textStyle="bold"/>
@@ -82,7 +84,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/rilis"
                     android:textStyle="bold"
-                    android:textColor="#39A388"
                     android:layout_marginTop="20px" />
 
                 <TextView
@@ -90,7 +91,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textColor="#F0A500"
+                    android:layout_marginLeft="10px"
                     android:layout_marginTop="20px" />
 
             </LinearLayout>
