--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -87,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Movie Description"
+            android:textColor="@color/black"
             android:layout_marginTop="20px"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"/>
