--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,11 +11,12 @@
     <color name="vintage1">#C9CCD5</color>
     <color name="vintage2">#CE99A8B2</color>
     <color name="vintage3">#1C1B1A</color>
-    <color name="vintage4">#DDCCCCCC</color>
+    <color name="vintage4">#CCCCCC</color>
     <color name="vintage5">#CCCCCC</color>
     <color name="yellow">#F0A500</color>
     <color name="duskYellow">#FFA300</color>
     <color name="lighGrey">#d3d3d3</color>
     <color name="transparan">#00FFFFFF</color>
+    <color name="blue">#0C5CD8</color>
 
 </resources>
