--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -8,11 +8,39 @@
     android:background="@color/vintage4"
     tools:context=".DetailMovie">
 
-    <ImageView
-        android:id="@+id/image_backdrop_detail"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/launcher"/>
+        android:layout_height="350dp">
+
+        <com.google.android.exoplayer2.ui.PlayerView
+            android:id="@+id/player_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            app:resize_mode="fit"
+            app:hide_on_touch="true"
+            app:show_timeout="5000"
+            app:rewind_increment="10000"
+            app:fastforward_increment="10000"
+            app:use_controller="true"
+            android:background="@color/black"
+            app:player_layout_id="@layout/exo_simple_player_view"
+            app:controller_layout_id="@layout/custom_controls"
+            />
+
+        <ProgressBar
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:id="@+id/progress_bar"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
+
+<!--    <ImageView-->
+<!--        android:id="@+id/image_backdrop_detail"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:src="@mipmap/launcher"/>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +49,8 @@
         <ImageView
             android:id="@+id/image_view_detail"
             android:layout_width="90dp"
-            android:layout_height="130dp"/>
+            android:layout_height="130dp"
+            android:src="@mipmap/ic_launcher"/>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
